Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignNumObjIntegerField.quorum
class Main
    Number v
    action Main
        v:SetValue(Test())
    end

    action Test() returns Number
        integer var = 5
        return var
    end
end